<resources>

    <string name="app_name">Foosball Timer</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Foos Timer</string>
    <string name="start_game_button_text">Let\'s Foos!</string>
    <string name="stop_game_button_text">Enough Foos!</string>
    <string name="start_game_toast_text">Game has started!</string>
    <string name="end_game_toast_text">Game has ended!</string>
    <string name="seconds_description_textview_text">seconds remaining</string>

    <string name="pref_activity_title">Preferences</string>
    <string name="pref_menu_item_title">Preferences</string>
    <string name="pref_gametime_category_name">Game Duration</string>
    <string name="pref_gametime_list_title">Game Duration Options</string>
    <string name="pref_gametime_list_summary">Select the duration of your timeboxed foosball game.</string>
    <string name="pref_gametime_list_default_value">4</string>

    <string name="pref_gameend_action_category_name">Game End Actions</string>
    <string name="pref_gameend_action_vibrate_title">Vibrate on Game End</string>
    <string name="pref_gameend_action_vibrate_summmary">Select whether the device should vibrate to signal the end of the game.</string>
    <string name="pref_gameend_action_sound_title">Play Sound on Game End</string>
    <string name="pref_gameend_action_sound_summmary">Select whether the device should play a sound to signal the end of the game.</string>

    <string name="nfc_push_complete_message">Game data sent.</string>
    <string name="nfc_game_cannot_sync">Game already in progress, cannot sync with another device.</string>
</resources>